# autogen-selector

./: README.md  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
autogen_selector/: hosting.py  main.py
autogen_selector/services/: azure_openai_service.py
autogen_selector/tools/: tools.py
tests/autogen_selector/services/: test_azure_openai_service.py
